[COZY-568] fix: 사용자가 참여 요청한 방 목록 조회 페이징 적용, 로그인한 사용자가 참여한 방이 있는지 여부 조회에 방장여부 조회 추가 (#321)
* [COZY-568] fix: 사용자가 참여 요청한 방 목록 조회 페이지네이션 적용

* [COZY-568] fix: 로그인한 사용자가 참여한 방이 있는지 여부 조회에 방장여부 조회 추가